src/App.css
* {
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  -webkit-tap-highlight-color: transparent;
}

html,
body {
  overflow: auto;
}
body {
  background-color: #fdfdfd;
  padding: 56px 0 55px 0;
}

a {
  color: #18b0b0;
  font-weight: bold;
}
.container {
  text-align: center;
  width: 80%;
  max-width: 100rem;
  z-index: 100;
}
.stats {
  margin-top: 5px;
}
.boundaried-land-indian {
  stroke: #464646;
}
.boundaried-land-indian:hover::after {
  content: "";
  background-color: rgba(255, 255, 255, 0.25);
  width: 100%;
  height: 100%;
  display: block;
}
.card {
  text-align: center;
  padding: 10px;
  box-sizing: border-box;
  box-shadow: 0 10px 40px -10px rgba(0, 64, 128, 0.2);
  transition: box-shadow 0.3s;
  background: #fff;
  overflow: auto;
}

.card p {
  margin: 0;
}
.card .count {
  font-size: 2em;
  font-weight: 700;
}

.card .delta {
  font-weight: 800;
}

.card.confirmed .count {
  /* color: #0088ff; */
}
.card.confirmed .delta {
  color: red;
}
.card.tested .delta {
  color: #17a2bc;
}

.card.active .count {
  /* color: #ff9a00; */
}
.card.active .delta {
  color: red;
}

.card.recovered .count {
  /* color: green; */
}
.card.recovered .delta {
  color: green;
}

.popover {
  position: absolute;
  border: 1px solid #e4e4e4;
  background: #ffffff;
  padding: 5px 15px;
  font-size: 16px;
  border-radius: 10px;
}

/* HELP CSS */
.table {
  text-align: center;
  width: 100%;
  border-collapse: collapse;
}
.help-table tbody tr:nth-of-type(odd) {
  background: #e0fdf6;
}

.table thead {
  font-weight: bolder;
  background: #e4e4e4;
}
.table td,
.table th {
  padding: 10px;
}

.table th {
  padding: 10px;
}

.table a {
  color: #000;
}

.statewise-cases tbody tr {
  cursor: pointer;
  border-bottom: 1px solid #f4f4f4;
  font-size: 15px;
}

.statewise-cases thead .heading {
  display: flex;
  min-width: 100px;
  justify-content: center;
}
.statewise-cases tbody tr:nth-child(even) {
  background: #f8f8f8;
}

.statewise-cases td,
.statewise-cases th {
  padding: 8px;
}

.statewise-cases td:nth-child(2) {
  text-align: left;
}

.statewise-cases tbody tr.fold > td {
  padding: 0;
}
.statewise-cases tbody tr.fold .districts-table {
  max-height: 1000px;
  transition: all 0.4s ease;
}
.statewise-cases tbody tr.fold.close .districts-table {
  max-height: 0;
  overflow: hidden;
  transition: all 0.4s ease;
}
.statewise-cases tbody tr.fold {
  background: transparent;
}

.state-row.open {
  background: #f5f5f5;
  box-shadow: -1px 3px 5px 2px #e4e4e4;
}
.state-row .expand-icon img {
  transition: all 0.4s ease-in-out;
}
.state-row.open .expand-icon img {
  transform: rotateZ(90deg);
}

.state-row .delta,
.fold .delta {
  font-size: 11px;
  font-weight: 400;
  color: gray;
}
.state-row .delta.confirmed,
.fold .delta.confirmed {
  color: red;
}
.state-row .delta.recovered {
  color: green;
}
.state-row .delta.deaths {
  color: red;
}

/* Districts Table */
.districts-table table {
  width: 100%;
}
.districts-table th {
  padding: 4px;
}
.districts-table table tr td {
  padding: 4px;
  text-align: center;
}
.districts-table table tr td:nth-child(2) {
  text-align: center;
}
.districts-table .title {
  display: inline-block;
}

.sorted-svg {
  width: 10px;
  right: 0;
  transform: rotate(135deg);
  stroke-width: 5px;
  align-self: center;
  display: inline-block;
  margin: -7px -3px -6px 0.25rem;
  color: rgba(108, 117, 125, 0.6);
}

/* Notification SVG */

.notification {
  background: #50a4b5;
  padding: 10px;
  color: #fff;
  text-align: center;
}
.last-updated-state {
  font-size: 12px;
  color: #777;
  padding: 10px;
}

/* Last Updated pulse animation */

.live-indicator-wrapper {
  margin-top: 10px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.live-indicator {
  float: left;
  margin: 10px;
  width: 6px;
  height: 6px;
  text-transform: uppercase;
  background: #ff1818;
  border-radius: 50%;
  animation: shadow-pulse 1s infinite;
}

.last-updated-main {
  font-size: 14px;
  color: #666;
}

@keyframes shadow-pulse {
  0% {
    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
  }
  100% {
    box-shadow: 0 0 0 15px rgba(0, 0, 0, 0);
  }
}
/* Credits */

.helpful-resources ul {
  text-align: left;
}
.helpful-resources ul li {
  margin: 10px 0;
  overflow-wrap: break-word;
}

/* Footer CSS */
.footer {
  padding: 1em;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 20px;
  z-index: 1000;
  font-size: 0.75rem;
  background: #fff;
  text-align: center;
  box-shadow: 0px 4px 40px 0px rgba(0, 64, 128, 0.2);
}
.footer span {
  margin: 0 10px;
}

.footer a {
  text-decoration: none;
  color: #000;
}

/* FAQ css */
li.question {
  font-size: 1.4em;
  list-style-type: none;
  color: #18b0b0;
}
li.answer {
  list-style: none;
}

.floating-actions {
  position: fixed;
  bottom: 50px;
  right: 20px;
  display: none;
  z-index: 100;
}
.wa-svg {
  background: #fff;
  border-radius: 50%;
}

/* RaceChart CSS */

.race-chart h3,
.race-chart h2 {
  margin-bottom: 10px;
  margin-top: 5px;
}

.race-chart h2 {
  font-size: 1.4em;
}
.race-chart h3 {
  font-size: 1.2em;
}
.race-chart-controls {
  margin-bottom: 5px;
}

button.chart-control-btn {
  cursor: pointer;
  padding: 5px 10px;
  border: 1px solid #e4e4e4;
  margin: 5px 10px;
  background: #fff;
  min-width: 70px;
}

.chart-control-btn:focus {
  outline: none;
}
.chart-control-btn:active {
  border: 1px solid #ddd;
  background: #e4e4e4;
}

img.control-img {
  width: 10px;
  margin-right: 5px;
}

.racechart-speed {
  color: #666;
  font-size: 12px;
}
.social-footer {
  margin-top: 40px;
}
.social-footer ul {
  list-style: none;
  width: 100%;
  text-align: center;
  padding: 0;
  display: flex;
  justify-content: center;
}
.social-footer li {
  margin: 10px;
}
.social-footer .github {
  padding: 10px 20px;
  background: #131313;
  color: #fff;
  text-decoration: none;
  border-radius: 10px;
}

.social-footer img {
  width: 20px;
  vertical-align: sub;
  margin-right: 5px;
}
.social-footer .twitter {
  padding: 10px 20px;
  background: rgb(29, 161, 242);
  color: #fff;
  text-decoration: none;
  border-radius: 10px;
}

@media (max-width: 460px) {
  h1 {
    font-size: 1.2rem;
  }
  .container {
    width: 100%;
  }
  td {
    padding: 5px;
  }
  .state-col {
    width: 40%;
  }
  .popover {
    font-size: 12px;
    padding: 2px 8px;
    font-weight: bold;
  }
  .statewise-cases {
    font-size: 0.9rem;
  }
  .statewise-cases thead .heading {
    min-width: auto;
  }
  .faqs ul {
    padding: 20px;
  }
  .floating-actions {
    display: block;
  }
  .social-footer {
    margin-top: 10px;
  }
  .social-footer ul {
    display: grid;
  }
  .social-footer li {
    margin-top: 15px;
  }
}

